# qemu

./: .gitignore  MAINTAINERS  README.md  hmp-commands-info.hx  meson.build
.github/workflows/: build_test.yaml  ci_regression.yml  eg_regression.yml  opentitan_regression.yaml
.gitlab-ci.d/opentitan/: build.yml  ot-bmtests.yml  ot-smoke.yml  pylint-ot.yml  python-ot.yml  qemu-ot.yml
accel/tcg/: cpu-exec.c
disas/: riscv.c
docs/opentitan/: cfggen.md  darjeeling.md  debug.md  devproxy.md  dtm.md  earlgrey.md  flashgen.md  gpiodev.md  i2c_host_proxy.md  ibex_hart.md  index.md  jtagmbx.md  keymgr-dpe.md  keymgr.md  lc_ctrl_dmi.md  ot_aes.md  ot_darjeeling.md  ot_earlgrey.md  ot_eg_pad_ring.md  ot_flash.md  (+26 more)
gdbstub/: gdbstub.c
hw/: Kconfig  meson.build
hw/opentitan/: Kconfig  meson.build  ot_aes.c  ot_alert.c  ot_aon_timer.c  ot_ast.c  ot_ast_dj.c  ot_ast_eg.c  ot_clkmgr.c  ot_clock_ctrl.c  ot_common.c  ot_csrng.c  ot_dev_proxy.c  ot_dm_tl.c  ot_dma.c  ot_edn.c  ot_eg_pad_ring.c  ot_entropy_src.c  ot_entropy_src_dj.c  ot_entropy_src_eg.c  ot_flash.c  ot_gpio_dj.c  ot_gpio_eg.c  ot_hmac.c  ot_i2c.c  ot_i2c_dj.c  ot_i2c_host_proxy.c  ot_ibex_wrapper.c  ot_ibex_wrapper_dj.c  ot_ibex_wrapper_eg.c  ot_key_sink.c  ot_keymgr.c  ot_keymgr_dpe.c  ot_kmac.c  ot_lc_ctrl.c  ot_mbx.c  ot_otbn.c  ot_otp.c  ot_otp_dj.c  ot_otp_dj_parts.c  (+29 more)
hw/opentitan/otbn/: meson.build
hw/opentitan/otbn/otbn/: meson.build
hw/opentitan/otbn/otbn/src/: csrs.rs  insn_exec.rs  key.rs  lib.rs  otbn.rs  proxy.rs  random.rs
qapi/: qom.json
system/: cpus.c  memory.c  vl.c
util/: fifo8.c
(+225 files in other folders)
